<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/blue_white_leftright_gradient">

    <EditText
        android:id="@+id/password_Input_Login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="24dp"
        android:autoText="false"
        android:ems="10"
        android:focusable="true"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintStart_toEndOf="@+id/password_TextView_Login"
        app:layout_constraintTop_toBottomOf="@+id/username_Input_Login" />

    <TextView
        android:id="@+id/username_TextView_Login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="180dp"
        android:text="@string/username"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/register_Button_Login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="40dp"
        android:text="@string/register"
        app:layout_constraintStart_toEndOf="@+id/login_Button_Login"
        app:layout_constraintTop_toBottomOf="@+id/password_Input_Login" />

    <TextView
        android:id="@+id/password_TextView_Login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="40dp"
        android:text="@string/password"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username_TextView_Login" />

    <Button
        android:id="@+id/login_Button_Login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="58dp"
        android:layout_marginTop="40dp"
        android:text="@string/login"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_Input_Login" />

    <EditText
        android:id="@+id/username_Input_Login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="170dp"
        android:ems="10"
        android:focusable="true"
        android:hint="@string/usuername_defaultMsg"
        android:inputType="textPersonName"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/username_TextView_Login"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:text="@string/login"
        android:textColor="#3F51B5"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/qq_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="400dp"
        android:layout_marginEnd="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/qq_login" />
</androidx.constraintlayout.widget.ConstraintLayout>