<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/blue_white_leftright_gradient">

    <ImageView
        android:id="@+id/header_Myself_Login"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_myself_black_24dp" />

    <Button
        android:id="@+id/buttonMyselfLogin"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginTop="212dp"
        android:text="@string/exitButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/usernameMyselfLogin"
        android:layout_width="163dp"
        android:layout_height="0dp"
        android:layout_marginTop="80dp"
        android:text="@string/usuername_defaultMsg"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/header_Myself_Login"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/test"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:text="@string/share"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonMyselfLogin" />

    <Button
        android:id="@+id/btn_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="250dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="7dp"
        android:text="返回"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>